# pkg/utils/validation.go
@@ -21,3 +21,16 @@ func IsValidUUID(uuid string) bool {
 	r := regexp.MustCompile("^[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-4[a-fA-F0-9]{3}-[8|9|aA|bB][a-fA-F0-9]{3}-[a-fA-F0-9]{12}$")
 	return r.MatchString(uuid)
 }
+
+func IsValidPassword(password string) bool {
+	if len(password) < 8 {
+		return false
+	}
+
+	var (
+		hasLower = regexp.MustCompile(`[a-z]`).MatchString(password)
+		hasUpper = regexp.MustCompile(`[A-Z]`).MatchString(password)
+	)
+
+	return hasLower && hasUpper
+}
